--- a/play_musica/index.html
+++ b/play_musica/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="player">
-    <img src="imagens/rock.jpg" alt="Rock">
+    <img src="imagens/ros.jpg" alt="No Doubt">
     <div class="descricao">
       <h2>Nome da música</h2>
       <i>Nome do artista</i>
@@ -33,7 +33,7 @@
 
   </div>
  
-  <audio src="./musicas/We Ride! - Reed Mathis.mp3"></audio> 
+  <audio src=""></audio> 
   <script src="comandos.js"></script>
 </body>
 </html>
